# HiveMind

./: .babelrc  .eslintrc.js  .flake8  .gitignore  Dockerfile  Procfile  README.md  README.org  TODO  TODO.md  alphabeta.py  app.py  design.txt  docker-compose.yml  hive.md  ideas.md  index.html  monte.py  noxfile.py  package-lock.json  package.json  project.org  pyproject.toml  test.py  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  static.yml  staticv2.yml
app/: app.js  package.json
app/html/: game.html
app/routes/: index.js
app/views/: drops.pug  form.pug  game.pug  home.pug  index.pug  layout.pug  modal.pug  share-game-modal.pug  test.pug
archive/: .flake8  .gitignore  README.md  monte.py  notes.md  pyproject.toml  readme.md  test.py
archive/hivehost/templates/: index.html  lobby.html
archive/hivemind/: hex.py  insect.py
archive/tests/: test_hexlib.py  test_hive.py
backend/: Dockerfile  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/src/: GameManager.ts  app.ts  game.ts  socket.ts
backend/src/routes/: routes.game.ts
brain/: alphabeta.py
cra-hive/: Dockerfile  README.md  package-lock.json  package.json
cra-hive/public/: index.html
cra-hive/src/: index.js
cra-hive/src/client/: App.js  App.tsx
gui/: drawhex.py  drawing.py
hivehost/: app.py  forms.py  room.py
hivehost/static/: hexlib.js  index.js  style.css
hivehost/templates/: base.html  index.html  lobby.html  play.html
hivemind/: __init__.py  hive.py  insect.py  state.py
mcts/: node.py  search.py
notes/: notes.md  socketio.md
public/: README.html  manifest.json
public/css/: style.css
src/: ai.py  app.js  app.py  client.py  constants.py  drawing.py  hive_server.py  http_server.py  index.tsx  libhex.py  main.py  one_hive.py  routes.js  run  run.py  server.py  sprite.py  svg.py  test.py  utils.py  visualize.py
src/GUI/: Button.py  StartScreen.py  TextInput.py  loadingSymbol.py  test.py
src/client/: App.tsx  GameController.js  drawing.js  game.js  hexlib.js  index.js  socket.js  textures.js
src/gui/: constants.py  drawing.py  util.py
src/hive_mind/: libhex.py
src/hivemind/: action.py  drawhex.py  hex.py  hive.py  insect.py  main.py  state.py
src/mcts/: node.py
src/server/: GameManager.js  GameManager.ts  app.ts  client1.py  client2.py  game.js  game.ts  server.js  server.py  socket.ts  sockets.js
src/shared/: hashmap.js  hashmap.ts  hexlib.js  hexlib.ts
src/static/: index.js  style.css
src/templates/: base.html  index.html
src/web/: README  index.html  index.js  package-lock.json  package.json  readme.md
templates/: base.html
tests/: test_action.py  test_fuzz.py  test_hexlib.py  test_hive.py  test_state.py
(+165 files in other folders)
