[tool.poetry]
name = "HiveMind"
version = "0.1.0"
description = "Python implementation of the tactical boardgame Hive."
authors = ["Aliuakbar <aligottschall@protonmail.com>"]
repository = "https://github.com/aliuakbar/HiveMind"
packages = [
		{ include = "hivemind", from = "src" },
		{ include = "mcts", from = "src" },
]

exclude = ["notes"]

keywords = ["game", "boardgame"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.3"
black = "^20.8b1"
nox = "^2020.8.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
