[tool.poetry]
name = "HiveMind"
version = "0.1.0"
description = "Python implementation of the tactical boardgame Hive."
authors = ["Aliuakbar <aligottschall@protonmail.com>"]
repository = "https://github.com/aliuakbar/HiveMind"
#packages = [
		#{ include = "hivemind", from = "src" },
		#{ include = "mcts", from = "src" },
#]

exclude = ["notes"]

keywords = ["game", "boardgame"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
websockets = "^8.1"
flask-socketio = "^5.0.1"
flask_socketio = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.3"
black = "^20.8b1"
nox = "^2020.8.22"
pytest-cov = "^2.10.1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["hivemind", "mcts"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

